--- a/css/Navbar.css
+++ b/css/Navbar.css
@@ -11,6 +11,7 @@ body {font-family: 'Lato', sans-serif;}
     background-color: white;
     height: 89px;
     width: 100%;
+    position: fixed;
     z-index: 100;
     top: 0;
   }
@@ -154,7 +155,49 @@ p{
   font-size: 15px;
   margin: 0 0 10px;
 }
- 
+
+
+
+#carousel {
+  width: 1515px;
+  height: 250px;
+  border: #030303 1px solid;
+  background-color: #000000;
+  overflow: hidden;
+}
+
+#carousel_center {
+  width: 100%;
+  height: auto;
+}
+
+#carousel_ul li img {
+  width: 100%;
+  height: 160px;
+}
+
+#carousel_ul {
+  position: relative;
+  list-style-type: none;
+  margin: 0px;
+  padding: 0px;
+  top: 30px;
+  width: 112%;
+}
+
+#carousel_ul li {
+  width: 200px;
+  height: 110px;
+  padding: 0px;
+  margin-right: 10px;
+  float: left;
+}
+
+#carousel_ul li img {
+  cursor: pointer;
+  cursor: hand;
+  border: 0px;
+}
 @media screen and (max-width: 1440px) {
   input[type=text]{
     margin-left: 25px;
