--- a/css/contact.css
+++ b/css/contact.css
@@ -73,6 +73,7 @@ input[type=submit]:hover {
 
 form,.content{
     height:auto !important;
+    margin-top: -5em;
     float: left;
     width: 40%
 }
