--- a/css/about.css
+++ b/css/about.css
@@ -297,7 +297,42 @@ and (max-device-width: 480px)
             float: right;
   }
 
-}
+
+  .carousel {
+      -ms-grid-column: 1;
+      -ms-grid-column-span: 3;
+      grid-column: 1/4;
+      background-color: #000;
+      overflow: hidden;
+    }
+    .carousel .subCarousel {
+      -webkit-animation-name: carousel;
+              animation-name: carousel;
+      -webkit-animation-duration: 18s;
+              animation-duration: 25s;
+      -webkit-animation-iteration-count: infinite;
+              animation-iteration-count: infinite;
+      -webkit-animation-timing-function: ease-in-out;
+              animation-timing-function: ease-in-out;
+      width: 5880px;
+      position: relative;
+      left: 100%;
+    }
+    .carousel .subCarousel img {
+      margin-right: 50px;
+    }
+    @-webkit-keyframes carousel {
+      100% {
+        position: relative;
+        left: -2880px;
+      }
+    }
+    @keyframes carousel {
+      100% {
+        position: relative;
+        left: -2880px;
+      }
+    }
 
 @media only screen
 and (min-device-width: 480px)
