--- a/css/style.css
+++ b/css/style.css
@@ -189,3 +189,26 @@ table {
       left: -2880px;
     }
   }
+
+  
+@media only screen and (max-width: 768px) {
+    .icon{
+        display: flex;
+        flex-flow: row;  
+        justify-content: center; 
+        background-color: black;
+        height: 30em;
+        padding: 80px;
+        width: 1500px;
+        text-align: center;
+        color: #fff;
+        position:;
+   }
+   
+   .icons{
+       width: 6em;
+   }
+
+
+
+}
